deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
  


  for rolling update feature 
  create deployemnt with diffrent version of image in yaml file version 1.24 latest
  hit apply afsin for new file 
  to check histrory
  kubectl rollout history nginx-deployment 
  kubectl apply -f deployment.yaml --record=true ------note revison
  kubectl rollout undo deployment.apps/nginx-deployment --to-revision=1


  rolling strategies 



  apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        strategy:
   type: RollingUpdate
   rollingUpdate:
     maxsurge
     max Unavailabe -----check neat
