limit range code execution with pod file.yml
apiVersion: v1
kind: LimitRange
metadata:
  name: cpu-resource-constraint
spec:
  limits:
  - default: # this section defines default limits
      memory: 1
    defaultRequest: # this section defines default requests
      memory: 500m
    max: # max and min define the limit range
      memory: "1"
    min:
      memory: 500m
    type: Container



------------
piVersion: v1
kind: Pod
metadata:
  name: nginx
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      limits:
        memory: "800Mi"
      requests:
        memory: "600Mi"
