complete deployment with node port.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
  app.kubernetes.io/team: proxy
spec:
  replicas: 3
  selector:
    matchLabels:
  app.kubernetes.io/team: proxy
  template:
    metadata:
      labels:
  app.kubernetes.io/team: proxy
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80








apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app.kubernetes.io/team: proxy
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
      - containerPort: 80
    



apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app.kubernetes.io/team: proxy
  ports:
  - name: name-of-service-port
    protocol: TCP
    port: 80
    targetPort: 80
    type: NodePort
